[package]
name          = "lapin-futures-native-tls"
version       = "0.1.0" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of native-tls with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-native-tls"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_native_tls"

[dependencies]
futures            = "^0.1"
tls-api-native-tls = "^0.1.14"
tokio-core         = "^0.1"

[dependencies.lapin-futures-tls-api]
version = "^0.8"
path    = "../tls-api"

[dev-dependencies]
env_logger = "^0.5"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
