[package]
name          = "lapin-futures-native-tls"
version       = "0.6.1" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of native-tls with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-native-tls"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_native_tls"

[dependencies]
futures    = "^0.1"
native-tls = "^0.2"
tokio-tls  = "^0.2"

[dependencies.lapin-futures-tls-internal]
version = "^0.3.1"
path    = "../internal"

[dev-dependencies]
env_logger = "^0.6"
tokio      = "^0.1.6"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
