[package]
name          = "lapin-futures-openssl"
version       = "0.2.0" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of openssl with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-openssl"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_openssl"

[dependencies]
futures         = "^0.1"
tls-api-openssl = "^0.1.14"

[dependencies.lapin-futures-tls-api]
version = "^0.9"
path    = "../tls-api"

[dev-dependencies]
env_logger = "^0.5"
tokio      = "^0.1.6"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
