[package]
name          = "lapin-futures-rustls"
version       = "0.15.0" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of rustls with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-rustls"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_rustls"

[dependencies]
bytes              = "^0.4"
futures            = "^0.1"
lapin-futures      = "^0.14"
tokio-executor     = "^0.1"
tokio-io           = "^0.1"
tokio-rustls       = "^0.8"
tokio-tcp          = "^0.1"
trust-dns-resolver = "^0.9"
webpki-roots       = "^0.15.0"

[dev-dependencies]
env_logger = "^0.5"
tokio      = "^0.1.6"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
