[package]
name          = "lapin-futures-rustls"
version       = "0.20.0" # remember to update html_root_url
edition       = "2018"
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of rustls with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-rustls"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_rustls"

[features]
default        = ["dns-over-https", "dns-over-tls"]
dns-over-https = ["lapin-futures-tls-internal/dns-over-https-rustls"]
dns-over-tls   = ["lapin-futures-tls-internal/dns-over-rustls"]

[dependencies]
futures      = "^0.1"
tokio-rustls = "^0.9"
webpki-roots = "^0.16"

[dependencies.lapin-futures-tls-internal]
version = "^0.6"
path    = "../internal"

[dev-dependencies]
env_logger = "^0.6"
failure    = "^0.1"
tokio      = "^0.1.6"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
