[package]
name          = "lapin-futures-tls-api"
version       = "0.8.0" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of tls-api with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-tls-api"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_tls_api"

[dependencies]
amq-protocol       = "^0.19"
bytes              = "^0.4"
futures            = "^0.1"
lapin-futures      = "^0.11"
tls-api            = "^0.1.14"
tokio-executor     = "^0.1"
tokio-io           = "^0.1"
tokio-tcp          = "^0.1"
tokio-tls-api      = "^0.1.19"
trust-dns-resolver = "^0.9"

[dev-dependencies]
env_logger   = "^0.5"
tokio-core   = "^0.1"
tls-api-stub = "^0.1"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
