[package]
name          = "lapin-futures-tls-api"
version       = "0.13.2" # remember to update html_root_url
authors       = ["Marc-Antoine Perennou <%arc-Antoine@Perennou.com>"]
description   = "Integration of tls-api with lapin-futures"
repository    = "https://github.com/sozu-proxy/lapin-futures-tls"
documentation = "https://docs.rs/lapin-futures-tls-api"
keywords      = ["amqp","rabbitmq","futures","tokio","tls"]
categories    = ["api-bindings","network-programming"]
license       = "BSD-2-Clause"

[lib]
name = "lapin_futures_tls_api"

[dependencies]
futures       = "^0.1"
tls-api       = "^0.1.14"
tokio-tls-api = "^0.1.19"

[dependencies.lapin-futures-tls-internal]
version = "^0.1"
path    = "../internal"

[dev-dependencies]
env_logger   = "^0.6"
tls-api-stub = "^0.1"
tokio        = "^0.1.6"

[badges]
travis-ci = { repository = "sozu-proxy/lapin-futures-tls" }
appveyor  = { repository = "Keruspe/lapin-futures-tls" }
